# tech-guide

./: .gitignore  CLAUDE.md  PROGRESS.md  docker-workshop.md  learning_tracker.xlsx  lesson-02-function-tools-and-context.md  lesson_2.md  next-step.md  thesis of book promt.md
.claude/: settings.local.json
docker-practice/: DOCKER_WORKSHOP.md  Dockerfile  LINKEDIN_POST.md  app.py
docker-practice/app_1/: Dockerfile
docker-practice/app_2/: Dockerfile  main.py
notes/: agent-factory-about-this-book.md  agent-factory-thesis.md  claude-ecosystem-spec-driven-development.md  part6-nonnegotiables-execution-guide.md  preface-agent-factory-walkthrough.md
notes/Chapter-61-Introduction-to-AI-Agents/: 01-what-is-an-ai-agent.md  02-core-agent-architecture.md  03-agentic-problem-solving-process.md  04-multi-agent-design-patterns.md  05-agent-ops.md  06-agent-interoperability-security.md  07-agent-sdk-landscape.md  08-your-first-agent-concept.md
notes/chapter-34-openai-agents-sdk/: lesson-01-agents-and-runner.md  lesson-02-agent-tools-context-student-guide.md  lesson-02-function-tools-and-context.md  lesson-02-support-desk-walkthrough-student-guide.md  lesson-03-agents-as-tools-student-guide.md
notes/sql-teaching/: session-1-querying.md  (+3 more)
openai-agents-sdk/: 00_practice.py  00_task_management_agent.py  00_task_management_updated.py  01_support_desk_assistant.py  02_sro_agent.py  03_agents_as_tools.py  03_agents_as_tools_updated.py  clients.py  cotext-in-runner.py  main.py  pyproject.toml  simple.py  task_management_agent.py  test.ipynb
resources/: next-step.md  prompt.md
(+7 files in other folders)
